--- a/README
+++ b/README
@@ -1,4 +1,6 @@
+
+Css3 Transition ,Transform,Animation Property
 resources to benefit from
-https://www.w3schools.com/css/default.asp
-https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_animated_properties
-and various editors (ide)
+1-https://www.w3schools.com/css/default.asp 
+2-https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_animated_properties 
+3-And various editors (ide) Vscode Sublimetext Atom Bracelet
